--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@
 @theme {
   --color-text: #0f0f0f;
   --color-background: #fbfbfb;
-  --color-background-ui: #da5893;
-  --color-logo-primary: #faa2ca;
-  --color-logo-stroke: #382731;
+  --color-background-ui: #0D9488;
+  --color-logo-primary: #2abfad;
+  --color-logo-stroke: #115E59;
   --color-text-stroke: #f6f6f6;
   --color-mid-gray: #808080;
 }
@@ -49,8 +49,8 @@
     /* Colors - Dark Theme */
     --color-text: #fbfbfb;
     --color-background: #2c2b29;
-    --color-logo-primary: #f28cbb;
-    --color-logo-stroke: #fad1ed;
+    --color-logo-primary: #15a593;
+    --color-logo-stroke: #2abfad;
   }
 }
 
@@ -58,6 +58,27 @@
   .text-stroke {
     -webkit-text-stroke: 2px var(--color-text-stroke);
   }
+}
+
+/* Range input thumb styling */
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background: var(--color-text);
+  cursor: pointer;
+  border: none;
+}
+
+input[type="range"]::-moz-range-thumb {
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background: var(--color-text);
+  cursor: pointer;
+  border: none;
 }
 
 .logo-primary {
