style: fix prettier formatting in CSS files

--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@
 @theme {
   --color-text: #0f0f0f;
   --color-background: #fbfbfb;
-  --color-background-ui: #0D9488;
+  --color-background-ui: #0d9488;
   --color-logo-primary: #2abfad;
-  --color-logo-stroke: #115E59;
+  --color-logo-stroke: #115e59;
   --color-text-stroke: #f6f6f6;
   --color-mid-gray: #808080;
 }
